# ThriftSharedMemory

./: CMakeLists.txt  hello.thrift  transport.cpp  transport.h
client/: CMakeLists.txt  client.cpp  client.cs
gen-cpp/: Hello.cpp  Hello.h  hello_constants.cpp  hello_constants.h  hello_types.cpp  hello_types.h
server/: CMakeLists.txt  server.cpp
